ppx/tests/failing/6.ml
let[@reaml.component "Foo"] _foo () =
  let _ =
   fun () ->
    let[@reaml] () = () in
    ()
  in
  ()
